src/objects/inscor__Inventory_Grouping__c.object
<CustomObject>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__Grouped__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Grouped?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Inventory_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inventory ID</label>
        <referenceTo>inscor__Inventory_Line__c</referenceTo>
        <relationshipLabel>Inventory Groupings</relationshipLabel>
        <relationshipName>Inventory_Groupings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Release_Line__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Release Line</label>
        <referenceTo>inscor__Release_Line__c</referenceTo>
        <relationshipLabel>Inventory Groupings</relationshipLabel>
        <relationshipName>Inventory_Groupings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Inventory Grouping</label>
    <nameField>
        <displayFormat>INVG-{0}</displayFormat>
        <label>Inventory Grouping ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Groupings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>